--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,7 @@
     
     <div class="main-content">
     {{>header}}
+    <p>This site was created by Daniel. It used data from mapbox.com and darksky.net!</p>
     <img class="portrait" src="/img/Daniel0.png">
 
     </div>
